# qorai-core

./: .clangd  .eslintrc.js  .gclient  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  .qorai_gclient  .sonarcloud.properties  BUILD.gn  CONTRIBUTING.md  DEPS  PRESUBMIT.py  README.md  advanced_car_parser.py  analyze_tlv.py  bom_parser.py  chromium_presubmit_config.json5  decode_assets_car.py  jest.config.js  package-lock.json  package.json  qorai_paks.gni  qorai_repack_locales.gni  snapcraft.yaml  test_decompress.py  tsconfig-webpack.json  tsconfig.json
android/: BUILD.gn  android_browser_tests.gni  qorai_java_resources.gni  qorai_java_sources.gni  qorai_xml_preprocessor.gni  xml_processor.py  xml_processor.pydeps
android/browsertests_apk/: AndroidManifest.xml.jinja2
android/feed/: qorai_feed_java_sources.gni
android/java/: AndroidManifest.xml  AndroidManifest_intent_filters.xml  apk_for_test.flags  proguard.flags
android/javatests/: AndroidManifest.xml  BUILD.gn
android/junit/: BUILD.gn
app/theme/: BUILD.gn  qorai_theme_resources.grd  qorai_unscaled_resources.grd
base/: BUILD.gn  build_time_unittest.cc  feature_override_unittest.cc  qorai_base_shared_preferences_java.gni  sources.gni
base/apple/: BUILD.gn  base_value_bridge+private.h  base_value_bridge.h  base_value_bridge.mm  foundation_util.h
base/mac/: BUILD.gn
base/process/: process_launcher.h  process_launcher_posix.cc  process_launcher_win.cc
base/test/: BUILD.gn  current_test_vendor_is_qorai_unittest.cc  test_vendor_is_qorai.cc
base/trace_event/: qorai_process_memory_dump_unittest.cc
browser/: BUILD.gn  DEPS  about_flags.cc  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  default_protocol_handler_utils_win.cc  default_protocol_handler_utils_win.h  default_protocol_handler_utils_win_unittest.cc  qorai_app_controller_mac.h  qorai_app_controller_mac.mm  qorai_app_controller_mac_browsertest.mm  qorai_autofill_browsertest.cc  qorai_browser_features.cc  qorai_browser_features.h  qorai_browser_main_extra_parts.cc  qorai_browser_main_extra_parts.h  qorai_browser_main_extra_parts_p3a.cc  qorai_browser_main_extra_parts_p3a.h  qorai_browser_main_parts.cc  qorai_browser_main_parts.h  qorai_browser_main_parts_mac.h  qorai_browser_main_parts_mac.mm  qorai_browser_process.cc  qorai_browser_process.h  qorai_browser_process_impl.cc  qorai_browser_process_impl.h  qorai_content_browser_client.cc  qorai_content_browser_client.h  qorai_content_browser_client_browsertest.cc  qorai_content_browser_client_unittest.cc  qorai_drm_tab_helper.cc  qorai_drm_tab_helper.h  qorai_local_state_prefs.cc  qorai_local_state_prefs.h  qorai_prefs_browsertest.cc  qorai_profile_prefs.cc  qorai_profile_prefs.h  qorai_resources_browsertest.cc  qorai_resources_util_unittest.cc  qorai_scheme_load_browsertest.cc  (+11 more)
browser/ai_chat/: BUILD.gn  DEPS  ai_chat_agent_profile_browsertest.cc  ai_chat_agent_profile_helper.cc  ai_chat_agent_profile_helper.h  ai_chat_agent_profile_manager.cc  ai_chat_agent_profile_manager.h  ai_chat_browsertests.cc  ai_chat_metrics_browsertest.cc  ai_chat_policy_browsertest.cc  ai_chat_profiles_enabled_browsertest.cc  ai_chat_qorai_search_throttle_browsertest.cc  ai_chat_render_view_context_menu_browsertest.cc  ai_chat_service_factory.cc  ai_chat_service_factory.h  ai_chat_settings_helper.cc  ai_chat_settings_helper.h  ai_chat_sidepanel_behavior_browsertest.cc  ai_chat_throttle_unittest.cc  ai_chat_ui_browsertest.cc  ai_chat_utils.cc  ai_chat_utils.h  annotated_page_content_test_util.cc  annotated_page_content_test_util.h  browser_tool_provider.cc  browser_tool_provider.h  browser_tool_provider_factory.cc  browser_tool_provider_factory.h  content_agent_task_provider.h  content_agent_tool_provider.cc  content_agent_tool_provider.h  content_agent_tool_provider_browsertest.cc  content_agent_tool_provider_factory.cc  content_agent_tool_provider_factory.h  content_agent_tool_provider_unittest.cc  content_agent_tools_browsertest.cc  full_screenshotter_unittest.cc  page_content_blocks.cc  page_content_blocks.h  page_content_blocks_unittest.cc  (+14 more)
browser/android/: BUILD.gn  qorai_feature_util.cc  qorai_init_android.cc  qorai_local_state_android.cc  qorai_relaunch_utils.cc  qorai_shields_content_settings.cc  qorai_shields_content_settings.h  qorai_sync_worker.cc  qorai_sync_worker.h  qorai_tab_features.cc  qorai_tab_features.h
browser/autocomplete/: BUILD.gn  chrome_autocomplete_provider_client_unittest.cc  qorai_autocomplete_scheme_classifier.cc  qorai_autocomplete_scheme_classifier.h  sources.gni
browser/autoplay/: BUILD.gn  autoplay_browsertest.cc
browser/banners/: BUILD.gn  app_banner_manager_desktop_browsertest.cc
browser/browsing_data/: BUILD.gn  DEPS  qorai_browsing_data_remover_browsertest.cc  qorai_browsing_data_remover_delegate.cc  qorai_browsing_data_remover_delegate.h  qorai_browsing_data_remover_delegate_unittest.cc  qorai_clear_browsing_data.cc  qorai_clear_browsing_data.h  (+2 more)
common/: BUILD.gn  DEPS  pref_names.h  qorai_channel_info.cc  qorai_channel_info.h  qorai_channel_info_browsertest.cc  qorai_channel_info_posix.cc  qorai_channel_info_posix.h  qorai_channel_info_unittest.cc  qorai_content_client.cc  qorai_content_client.h  qorai_content_client_unittest.cc  qorai_renderer_configuration.mojom  resource_bundle_helper.cc  resource_bundle_helper.h  sources.gni
elevation_service/: README.md  sources.gni
fuzzers/: BUILD.gn
ios/: BUILD.gn  CPPLINT.cfg  DEPS  Info.plist
net/: BUILD.gn  sources.gni
qorai_domains/: BUILD.gn  buildflags.gni  service_domains.cc  service_domains.h  service_domains_unittest.cc
renderer/: BUILD.gn  DEPS  qorai_content_renderer_client.cc  qorai_content_renderer_client.h  qorai_render_frame_observer.cc  qorai_render_frame_observer.h  qorai_render_thread_observer.cc  qorai_render_thread_observer.h  sources.gni
resources/: BUILD.gn  allowlist.gni  qorai_allowlist.py  qorai_grit.gni  resource_ids.spec
utility/: BUILD.gn  DEPS  qorai_content_utility_client.cc  qorai_content_utility_client.h  sources.gni
v8/: sources.gni
(+17310 files in other folders)
