# Copyright (c) 2025 The Qorai Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

qorai_locale_source_patterns = [
  "${root_gen_dir}/components/qorai_components_strings_",
  "${root_gen_dir}/qorai/qorai_generated_resources_",
]

qorai_locale_deps = [
  "//qorai/app:qorai_generated_resources_grit",
  "//qorai/components/resources:strings",
]
